# tjcsl-discord-bot

./: .gitignore  README.md  api.py  main.py  pylintrc  pyproject.toml  tjcsl-discord-bot.service
tjcsl-discord-bot/: api.py  main.py  status.py
tjcsl-discord-bot/config/: __init__.py
tjcsl_discord_bot/: api.py  main.py  status.py
