[tool.poetry]
name = "tjcsl-discord-bot"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"
packages = [{include = "tjcsl_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "^2.4.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
